; ModuleID = '/home/carl/AnghaBench/linux/net/wireless/extr_wext-proc.c_wireless_dev_seq_next.c'
source_filename = "/home/carl/AnghaBench/linux/net/wireless/extr_wext-proc.c_wireless_dev_seq_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }
%struct.net = type { i32 }

@SEQ_START_TOKEN = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.seq_file*, i8*, i32*)* @wireless_dev_seq_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @wireless_dev_seq_next(%struct.seq_file* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.seq_file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.net*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %9 = call %struct.net* @seq_file_net(%struct.seq_file* %8)
  store %struct.net* %9, %struct.net** %7, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = load i8*, i8** @SEQ_START_TOKEN, align 8
  %15 = icmp eq i8* %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load %struct.net*, %struct.net** %7, align 8
  %18 = call i8* @first_net_device(%struct.net* %17)
  br label %22

19:                                               ; preds = %3
  %20 = load i8*, i8** %5, align 8
  %21 = call i8* @next_net_device(i8* %20)
  br label %22

22:                                               ; preds = %19, %16
  %23 = phi i8* [ %18, %16 ], [ %21, %19 ]
  ret i8* %23
}

declare dso_local %struct.net* @seq_file_net(%struct.seq_file*) #1

declare dso_local i8* @first_net_device(%struct.net*) #1

declare dso_local i8* @next_net_device(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
